--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -10,26 +10,26 @@ IDD_PREFERENCES DIALOGEX 0, 0, 350, 260
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "API Services",IDC_STATIC,10,10,330,190
+    GROUPBOX        "API Services",IDC_STATIC,10,10,321,190
     
-    CONTROL         "Enable iTunes API",IDC_ENABLE_ITUNES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,28,100,12
+    CONTROL         "iTunes",IDC_ENABLE_ITUNES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,28,100,12
     LTEXT           "iTunes API requires no key - just enable it.",IDC_STATIC,35,45,200,10
     
-    CONTROL         "Enable Discogs API",IDC_ENABLE_DISCOGS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,65,100,12
+    CONTROL         "Discogs",IDC_ENABLE_DISCOGS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,65,100,12
     LTEXT           "Discogs API Key:",IDC_STATIC,35,82,85,10
-    EDITTEXT        IDC_DISCOGS_KEY,125,80,200,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DISCOGS_KEY,125,80,190,14,ES_AUTOHSCROLL
     LTEXT           "Consumer Key:",IDC_STATIC,35,99,85,10
-    EDITTEXT        IDC_DISCOGS_CONSUMER_KEY,125,97,200,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DISCOGS_CONSUMER_KEY,125,97,190,14,ES_AUTOHSCROLL
     LTEXT           "Consumer Secret:",IDC_STATIC,35,116,85,10
-    EDITTEXT        IDC_DISCOGS_CONSUMER_SECRET,125,114,200,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_DISCOGS_CONSUMER_SECRET,125,114,190,14,ES_AUTOHSCROLL
     
-    CONTROL         "Enable Last.fm API",IDC_ENABLE_LASTFM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,139,100,12
+    CONTROL         "Last.fm",IDC_ENABLE_LASTFM,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,139,100,12
     LTEXT           "Last.fm API Key:",IDC_STATIC,35,156,85,10
-    EDITTEXT        IDC_LASTFM_KEY,125,154,200,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_LASTFM_KEY,125,154,190,14,ES_AUTOHSCROLL
     
     LTEXT           "Note: API keys are optional but recommended for better search results.",IDC_STATIC,20,177,300,10
     
-    GROUPBOX        "Information",IDC_STATIC,10,210,330,40
-    LTEXT           "API Priority: iTunes > Discogs > Last.fm",IDC_STATIC,20,225,200,10
+    GROUPBOX        "Information",IDC_STATIC,10,210,321,40
+    LTEXT           "API Priority: iTunes > Last.fm > Discogs",IDC_STATIC,20,225,200,10
     LTEXT           "For local files, local artwork is checked first before APIs.",IDC_STATIC,20,237,250,10
 END
