Added: Stream delay option

--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -6,7 +6,7 @@
 // Dialog
 //
 
-IDD_PREFERENCES DIALOGEX 0, 0, 350, 260
+IDD_PREFERENCES DIALOGEX 0, 0, 350, 290
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
@@ -37,4 +37,9 @@ BEGIN
     COMBOBOX        IDC_PRIORITY_3,140,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_PRIORITY_4,200,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     COMBOBOX        IDC_PRIORITY_5,260,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    
+    LTEXT           "Stream delay (May fix stream issues):",IDC_STATIC,10,265,150,10
+    EDITTEXT        IDC_STREAM_DELAY,135,263,30,14,ES_AUTOHSCROLL | ES_NUMBER
+    CONTROL         "",IDC_STREAM_DELAY_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,165,263,11,14
+    LTEXT           "seconds",IDC_STATIC,170,265,40,10
 END
