Added: 'Write Log' option

--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -42,4 +42,6 @@ BEGIN
     EDITTEXT        IDC_STREAM_DELAY,135,263,30,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_STREAM_DELAY_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,165,263,11,14
     LTEXT           "seconds",IDC_STATIC,170,265,40,10
+    
+    PUSHBUTTON      "Write Log",IDC_WRITE_LOG,275,265,55,16
 END
