--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -43,5 +43,5 @@ BEGIN
     CONTROL         "",IDC_STREAM_DELAY_SPIN,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS | UDS_NOTHOUSANDS,165,263,11,14
     LTEXT           "seconds",IDC_STATIC,170,265,40,10
     
-    PUSHBUTTON      "Write Log",IDC_WRITE_LOG,275,265,55,16
+    PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,265,85,16
 END
