--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -46,7 +46,7 @@ BEGIN
     PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,265,85,16
 END
 
-IDD_PREFERENCES_ADVANCED DIALOGEX 0, 0, 350, 240
+IDD_PREFERENCES_ADVANCED DIALOGEX 0, 0, 350, 260
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
@@ -65,7 +65,9 @@ BEGIN
     
     LTEXT           "Supported formats: PNG, JPG, JPEG, GIF, BMP",IDC_STATIC,20,147,200,10
     
-    GROUPBOX        "Miscellaneous",IDC_STATIC,10,194,320,60
+    GROUPBOX        "Miscellaneous",IDC_STATIC,10,194,320,80
     
-    CONTROL         "Clear panel when playback stopped",IDC_CLEAR_PANEL_WHEN_NOT_PLAYING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,214,200,12
+    CONTROL         "Clear panel when playback stopped",IDC_CLEAR_PANEL_WHEN_NOT_PLAYING,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,214,128,12
+    LTEXT           "[",IDC_STATIC,151,216,8,12
+    CONTROL         "Use noart image ]",IDC_USE_NOART_IMAGE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,156,214,92,12
 END
