--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -39,6 +39,8 @@ BEGIN
     COMBOBOX        IDC_PRIORITY_5,260,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     
     
+    LTEXT           "Disk Artwork Cache:",IDC_STATIC,20,268,70,10
+    COMBOBOX        IDC_ENABLE_DISK_CACHE,92,265,60,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,265,85,16
 END
 
