--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -41,6 +41,7 @@ BEGIN
     
     LTEXT           "Disk Artwork Cache:",IDC_STATIC,20,268,70,10
     COMBOBOX        IDC_ENABLE_DISK_CACHE,92,265,60,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDC_BROWSE_CACHE_FOLDER,155,265,20,14
     PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,265,85,16
 END
 
