--- a/foo_artwork.rc
+++ b/foo_artwork.rc
@@ -6,11 +6,11 @@
 // Dialog
 //
 
-IDD_PREFERENCES DIALOGEX 0, 0, 350, 290
+IDD_PREFERENCES DIALOGEX 0, 0, 350, 282
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
-    GROUPBOX        "API Services",IDC_STATIC,10,10,321,190
+    GROUPBOX        "API Services",IDC_STATIC,10,10,321,170
     
     CONTROL         "iTunes",IDC_ENABLE_ITUNES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,28,70,12
     CONTROL         "Deezer",IDC_ENABLE_DEEZER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,100,28,70,12
@@ -29,20 +29,20 @@ BEGIN
     LTEXT           "Last.fm API Key:",IDC_STATIC,35,156,85,10
     EDITTEXT        IDC_LASTFM_KEY,125,154,190,14,ES_AUTOHSCROLL
     
-    LTEXT           "Note: API keys are optional but recommended for better search results.",IDC_STATIC,20,177,300,10
-    
-    GROUPBOX        "Priority",IDC_STATIC,10,210,321,40
-    COMBOBOX        IDC_PRIORITY_1,20,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_PRIORITY_2,80,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_PRIORITY_3,140,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_PRIORITY_4,200,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_PRIORITY_5,260,225,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    
-    
-    LTEXT           "Disk Artwork Cache:",IDC_STATIC,20,268,70,10
-    COMBOBOX        IDC_ENABLE_DISK_CACHE,92,265,60,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "...",IDC_BROWSE_CACHE_FOLDER,155,265,20,14
-    PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,265,85,16
+    GROUPBOX        "Priority",IDC_STATIC,10,190,321,40
+    COMBOBOX        IDC_PRIORITY_1,20,205,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PRIORITY_2,80,205,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PRIORITY_3,140,205,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PRIORITY_4,200,205,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_PRIORITY_5,260,205,55,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+
+
+    LTEXT           "Disk Artwork Cache:",IDC_STATIC,20,248,70,10
+    COMBOBOX        IDC_ENABLE_DISK_CACHE,92,245,60,50,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
+    PUSHBUTTON      "...",IDC_BROWSE_CACHE_FOLDER,155,245,20,14
+    PUSHBUTTON      "Hide Artwork Source",IDC_SHOW_SOURCE,240,245,85,16
+
+    CONTROL         "Always skip local artwork",IDC_SKIP_LOCAL_ARTWORK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,20,265,200,12
 END
 
 IDD_PREFERENCES_ADVANCED DIALOGEX 0, 0, 350, 300
